syntax = "proto3";

import "google/protobuf/timestamp.proto";

package contract.v1;

message Events {
    repeated pool_AdminChanged pool_admin_changeds = 1;
    repeated pool_BeaconUpgraded pool_beacon_upgradeds = 2;
    repeated pool_FlashLoanCompleted pool_flash_loan_completeds = 3;
    repeated pool_FundsMigrated pool_funds_migrateds = 4;
    repeated pool_MinNetworkFeeBurnUpdated pool_min_network_fee_burn_updateds = 5;
    repeated pool_NetworkFeesBurned pool_network_fees_burneds = 6;
    repeated pool_PolRewardsPpmUpdated pool_pol_rewards_ppm_updateds = 7;
    repeated pool_PolWithdrawn pool_pol_withdrawns = 8;
    repeated pool_Paused pool_pauseds = 9;
    repeated pool_PoolAdded pool_pool_addeds = 10;
    repeated pool_PoolCollectionAdded pool_pool_collection_addeds = 11;
    repeated pool_PoolCollectionRemoved pool_pool_collection_removeds = 12;
    repeated pool_PoolCreated pool_pool_createds = 13;
    repeated pool_PoolRemoved pool_pool_removeds = 14;
    repeated pool_RoleAdminChanged pool_role_admin_changeds = 15;
    repeated pool_RoleGranted pool_role_granteds = 16;
    repeated pool_RoleRevoked pool_role_revokeds = 17;
    repeated pool_TokensTraded pool_tokens_tradeds = 18;
    repeated pool_Unpaused pool_unpauseds = 19;
    repeated pool_Upgraded pool_upgradeds = 20;
}

message pool_AdminChanged {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes previous_admin = 5;
    bytes new_admin = 6;
}

message pool_BeaconUpgraded {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes beacon = 5;
}

message pool_FlashLoanCompleted {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes token = 5;
    bytes borrower = 6;
    string amount = 7;
    string fee_amount = 8;
}

message pool_FundsMigrated {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes context_id = 5;
    bytes token = 6;
    bytes provider = 7;
    string amount = 8;
    string available_amount = 9;
    string original_amount = 10;
}

message pool_MinNetworkFeeBurnUpdated {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string old_min_network_fee_burn = 5;
    string new_min_network_fee_burn = 6;
}

message pool_NetworkFeesBurned {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes caller = 5;
    string amount = 6;
}

message pool_PolRewardsPpmUpdated {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    uint64 old_rewards_ppm = 5;
    uint64 new_rewards_ppm = 6;
}

message pool_PolWithdrawn {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes caller = 5;
    bytes token = 6;
    string pol_token_amount = 7;
    string user_reward = 8;
}

message pool_Paused {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes account = 5;
}

message pool_PoolAdded {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes pool = 5;
    bytes pool_collection = 6;
}

message pool_PoolCollectionAdded {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    uint64 pool_type = 5;
    bytes pool_collection = 6;
}

message pool_PoolCollectionRemoved {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    uint64 pool_type = 5;
    bytes pool_collection = 6;
}

message pool_PoolCreated {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes pool = 5;
    bytes pool_collection = 6;
}

message pool_PoolRemoved {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes pool = 5;
    bytes pool_collection = 6;
}

message pool_RoleAdminChanged {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes role = 5;
    bytes previous_admin_role = 6;
    bytes new_admin_role = 7;
}

message pool_RoleGranted {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes role = 5;
    bytes account = 6;
    bytes sender = 7;
}

message pool_RoleRevoked {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes role = 5;
    bytes account = 6;
    bytes sender = 7;
}

message pool_TokensTraded {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes context_id = 5;
    bytes source_token = 6;
    bytes target_token = 7;
    string source_amount = 8;
    string target_amount = 9;
    string bnt_amount = 10;
    string target_fee_amount = 11;
    string bnt_fee_amount = 12;
    bytes trader = 13;
}

message pool_Unpaused {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes account = 5;
}

message pool_Upgraded {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes implementation = 5;
}
